--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 pretrained/AdaBins_nyu.pt
 pretrained/AdaBins_nyu.ptZone.Identifier
 tools/3d/BoostingMonocularDepth
+model/superres/last.ckpt/dl=1
+model/superres/project.yaml/dl=1
