--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
     "python.analysis.extraPaths": [
+        "./MiDaS",
+        "./AdaBins",
+        "./CLIP",
         "./latent-diffusion",
         "./ResizeRight",
-        "./CLIP",
-        "./guided-diffusion",
-        "./AdaBins",
-        "./MiDaS"
     ],
-    "python.formatting.provider": "autopep8",
+    "python.formatting.pvider": "autopep8",
     "jupyter.jupyterServerType": "remote"
 }
