--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ pytorch3d-lite/
 models/512x512_diffusion_uncond_finetune_008100.pt
 models/dpt_large-midas-2f21e586.pt
 models/secondary_model_imagenet_2.pth
+models/latent_diffusion_txt2img_f8_large.ckpt
