--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,12 @@
 {
     "configurations": [
-    
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
+            "program": "app.py",
+            "console": "integratedTerminal",
+            "justMyCode": true
         },
-       
     ]
 }
