--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /env
 /v-diffusion-pytorch
 /guided-diffusion
+/guided_diffusion_disco
 /guided-diffusion-plms
 /CLIP
 /ResizeRight
@@ -24,3 +25,6 @@ models/512x512_diffusion_uncond_finetune_008100.pt
 models/dpt_large-midas-2f21e586.pt
 models/secondary_model_imagenet_2.pth
 models/latent_diffusion_txt2img_f8_large.ckpt
+static/output
+guided_diffusion_disco
+glid-3-xl
