--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,25 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
+    
+        // {
+        //     "name": "Python: Current File",
+        //     "type": "python",
+        //     "request": "launch",
+        //     "program": "${file}",
+        //     "console": "integratedTerminal",
+        //     "justMyCode": true
+        // },
         {
-           
+            // "name": "PowerShell Launch Current File",
+            // "type": "PowerShell",
+            // "request": "launch",
+            // "script": "${file}",
+            // "cwd": "${workspaceFolder}"
+            "program": "flask", //#"app.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "args" :  ["run" ,"--host=0.0.0.0"] 
