--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
         "deepmerge": "^4.2.2",
         "dropzone": "^5.9.3",
         "element-plus": "^1.2.0-beta.4",
+        "fs": "^0.0.1-security",
         "keylines": "file:src/components/keylines-6.8.0-75198",
         "leaflet": "1.3.4",
         "line-awesome": "^1.3.0",
@@ -49,6 +50,7 @@
         "vue": "3.2.31",
         "vue-axios": "^3.4.1",
         "vue-currency-input": "^2.1.0",
+        "vue-draggable-next": "^2.1.1",
         "vue-i18n": "^9.1.8",
         "vue-inline-svg": "^3.1.0",
         "vue-json-viewer": "3",
