--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
-        // {
-        //     "name": "Python: Current File",
-        //     "type": "python",
-        //     "request": "launch",
-        //     "program": "${file}",
-        //     "console": "integratedTerminal",
-        //     "justMyCode": true
-        // },
         {
-            // "name": "PowerShell Launch Current File",
-            // "type": "PowerShell",
-            // "request": "launch",
-            // "script": "${file}",
-            // "cwd": "${workspaceFolder}"
-            "program": "flask", //#"app.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args" :  ["run" ,"--host=0.0.0.0"] 
-        },
+            "name": "Python: Flask",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "app.py",
+                "FLASK_ENV": "development"
+            },
+            "args": [
+                "run",
+                "--no-debugger"
+            ],
+            "jinja": true,
+            "justMyCode": true
+        }
     ]
 }
