--- a/ui/package.json
+++ b/ui/package.json
@@ -56,7 +56,7 @@
         "vue-i18n": "^9.1.8",
         "vue-inline-svg": "^3.1.0",
         "vue-json-viewer": "3",
-        "vue-loader": "^17.0.0",
+        "vue-loader": "16.8.2",
         "vue-router": "^4.0.0-0",
         "vue3-apexcharts": "^1.4.1",
         "vue3-json-editor": "^1.1.5",
