--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=
-OPENAI_API_KEY=
+DISCORD_TOKEN=OTY2MzE2NzYyNjIwNjQxMzAw.Yl_-nQ.xbu7QSJGxN1PfGvlkOupL3lDAlc
+OPENAI_API_KEY=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
