--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ models/dpt_large-midas-2f21e586.pt
 models/secondary_model_imagenet_2.pth
 models/latent_diffusion_txt2img_f8_large.ckpt
 static/output
-glid_3_xl
+glid_3_xl/
 ui/node_modules
 static/data/projects/*/output/*/*.png
 content/images_out
@@ -33,4 +33,4 @@ static/dist
 ui/dist/media
 *.Identifier
 *.Identifier
-.ipynb_checkpoints/
+*ipynb_checkpoints*
