Glid-3-xl support for clip as a service and better ram usage = 336px!

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=OTY2MzE2NzYyNjIwNjQxMzAw.Yl_-nQ.cYMHY8Vikidmc65anbZBxI-MONg
-OPENAI_API_KEY=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
+DISCORD_TOKEN=OTY2MzE2NzYyNjIwNjQxMzAw.GKGM1J.sav_PwG2kE7fL2psw7GhfeNgj9BEF_wiRYup3Y
+OPENAI_API_KEY=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
