--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Flask",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "app.py",
+                "FLASK_ENV": "development"
+            },
+            "args": [
+                "run",
+        "--port=5001"
+            ],
+
+        },
+        {
             "name": "Python: CLI",
             "type": "python",
             "request": "launch",
@@ -36,22 +51,5 @@
             "console": "integratedTerminal",
             "justMyCode": true
         },
-        
-        {
-            "name": "Python: Flask",
-            "type": "python",
-            "request": "launch",
-            "module": "flask",
-            "env": {
-                "FLASK_APP": "app.py",
-                "FLASK_ENV": "development"
-            },
-            "args": [
-                "run",
-                "--no-debugger"
-            ],
-            "jinja": true,
-            "justMyCode": true
-        }
     ]
 }
