--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,5 @@
     },
     "python.formatting.pvider": "autopep8",
     "jupyter.jupyterServerType": "remote",
-    "vue3snippets.enable-compile-vue-file-on-did-save-code": true
+    "vue3snippets.enable-compile-vue-file-on-did-save-code": false
 }
